<resources>
    <string name="app_name">Lab_02</string>
    <string name="spin_message" translatable="false" />
    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="button3">Button 3</string>
    <string name="open_second_activity">Open Second Activity</string>
    <string name="button">Button</string>
    <string name="button4">BUTTON</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter password</string>
    <string name="type_your_password">Type your password:</string>
    <string name="type_email_here">Type email here</string>
    <string name="back">Back</string>
    <string name="Login">Login</string>
    <string name="enter_your_email_address">Enter your email address:</string>
</resources>